--- a/server/functions/package.json
+++ b/server/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
