--- a/espresso-tool/package.json
+++ b/espresso-tool/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
+    "openai": "^3.3.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
